[tool.poetry]
name = "repl_python3_python101-harshithama18"
version = "0.1.0"
description = ""
authors = ["harshithama18 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
